--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,7 @@
 name: Deploy to Google Apps Script
 
 on:
-  push:
-    branches:
-      - main  # Trigger the action only on pushes to the 'main' branch
+  workflow_dispatch:  # Allows manual triggering of the workflow
 
 jobs:
   deploy:
@@ -22,10 +20,13 @@ jobs:
       # Install clasp globally
       - run: npm install -g @google/clasp
 
-      # Authenticate clasp (You would need to provide your Google credentials here)
+      # Authenticate clasp using the credentials stored in GitHub Secrets
       - name: Authenticate clasp
-        run: clasp login --creds "<your-credentials-json>"
+        run: |
+          echo "${{ secrets.CLASP_CREDENTIALS }}" > credentials.json
+          clasp login --creds credentials.json
 
       # Push the project to Google Apps Script
       - name: Deploy to Google Apps Script
         run: clasp push
+
