--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ client_secret_395278851412-rk6ckueqpl7bmooe9qv7vup63trapf8a.apps.googleuserconte
 
 # Ignore clasp authentication files
 .clasprc.json
+.clasp.json
 
 # Ignore macOS system files
 .DS_Store
