--- a/appsscript.json
+++ b/appsscript.json
@@ -1,4 +1,8 @@
 {
+  "oauthScopes": [
+  "https://www.googleapis.com/auth/script.external_request",
+  "https://www.googleapis.com/auth/cloud-platform"
+  ],
   "timeZone": "America/Chicago",
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8",
